[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/MyFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menu/stage_prelude_menu/StagePreludeContent.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="StagePreludeContentControl" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.873
script = ExtResource( 3 )

[node name="StageNameLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.08
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "STAGE NAME"
align = 1
valign = 1

[node name="SelectedModeContentControl" type="Control" parent="."]
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 0.83

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 1.0
margin_bottom = 0.200012
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
